--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,4 +1,21 @@
 // Colors
+$basic-white: #ffffff;
+$basic-white-transparent: #ffffff30;
+$basic-black: #000000;
+$basic-black-2: #111111;
+$accent-color: #68b738;
+$accent-color-2: #5eaa2f;
+$basic-grey: #f2f2f2;
+$basic-grey-2: #eaeaea;
+$basic-grey-3: #d9d9d9;
+$special-grey: #cdcdcd;
+$special-grey-2: #666666;
+$special-grey-3: #bababa;
+$special-grey-4: #e7e7e7;
+$special-dark-grey: #444444;
+$special-dark-grey-transparent: #44444430;
+$special-dark-grey-2: #222222;
+$basic-red: #ff8282;
 
 $error: #ff8282;
 
