--- a/source/sass/components/page.scss
+++ b/source/sass/components/page.scss
@@ -1,5 +1,8 @@
 @use "../base/variables" as *;
 
+$bg-color: $basic-white;
+$font-color: $basic-black;
+
 .page {
   height: 100%;
   min-height: 100%;
