--- a/source/sass/components/product-list-additional.scss
+++ b/source/sass/components/product-list-additional.scss
@@ -1,5 +1,7 @@
 @use "../base/variables" as *;
 
+// Список дополнительных товаров
+
 .product-list-additional {
   display: flex;
   flex-direction: column;
