--- a/source/sass/components/product-list-main.scss
+++ b/source/sass/components/product-list-main.scss
@@ -4,6 +4,8 @@
 $between-tablet-width: 1000px;
 $list-desktop-width: 1440px;
 
+// Список основных товаров
+
 .product-list-main {
   display: grid;
   grid-template-columns: 1fr;
