--- a/source/sass/components/address.scss
+++ b/source/sass/components/address.scss
@@ -1,10 +1,17 @@
 @use "../base/variables" as *;
 
+$bg-color: $basic-white;
+$bg-color-secondary: $basic-grey;
+$font-color-title: $basic-black-2;
+$font-color-text: $special-dark-grey;
+
+// Раздел адреса компании
+
 .address {
   position: relative;
 
   &--secondary {
-    background-color: $bg-color-extra;
+    background-color: $bg-color-secondary;
   }
 }
 
@@ -18,6 +25,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    z-index: 1;
     position: absolute;
     top: 95px;
     left: 0;
@@ -35,9 +43,11 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  color: $font-color-title;
 
   @media (min-width: $tablet-width) {
     width: 175px;
+
     font-size: 20px;
     line-height: 26px;
   }
@@ -48,15 +58,16 @@
   width: 145px;
 
   line-height: 20px;
-  color: $font-color-secondary;
+  color: $font-color;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
-    text-align: end;
     width: 160px;
+
     font-size: 16px;
     line-height: 20px;
+    text-align: end;
   }
 
   @media (min-width: $desktop-width) {
