--- a/source/sass/components/contacts.scss
+++ b/source/sass/components/contacts.scss
@@ -1,7 +1,10 @@
 @use "../base/variables" as *;
 
+// Раздел контактов
+
 .contacts {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 20px 0;
