--- a/source/sass/components/example-cat.scss
+++ b/source/sass/components/example-cat.scss
@@ -1,15 +1,24 @@
 @use "../base/variables" as *;
 
+$bg-color: $basic-grey-2;
+$bg-color-white: $basic-white;
+$font-color: $special-dark-grey;
+$bg-color-termin: $basic-grey-2;
+$bg-color-termin-tablet: $basic-white;
+$border-color-description: $special-grey;
+
+// Раздел "Живой пример"
+
 .example-cat {
-  background-color: $bg-color-secondary;
+  background-color: $bg-color;
 
   @media (min-width: $tablet-width) {
     background-color: transparent;
-    background-image: linear-gradient($bg-color 56%, $bg-color-secondary 56%);
+    background-image: linear-gradient($bg-color-white 56%, $bg-color 56%);
   }
 
   @media (min-width: $desktop-width) {
-    background-image: linear-gradient($bg-color 21%, $bg-color-secondary 21%);
+    background-image: linear-gradient($bg-color-white 21%, $bg-color 21%);
   }
 }
 
@@ -50,13 +59,14 @@
 
 .example-cat__text {
   margin: 0 0 20px 0;
-  color: $font-color-secondary;
+  color: $font-color;
 
   @media (min-width: $tablet-width) {
     grid-column: 1 / -1;
+    margin: 0 0 54px 0;
+
     font-size: 16px;
     line-height: 24px;
-    margin: 0 0 54px 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -69,6 +79,7 @@
 .example-cat__description-list {
   margin: 0 0 34px 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   @media (min-width: $tablet-width) {
@@ -86,15 +97,15 @@
 
 .example-cat__description-item {
   position: relative;
-  text-align: center;
   display: flex;
   flex-direction: column-reverse;
+
+  text-align: center;
 }
 
 .example-cat__description-termin {
   position: absolute;
   width: 77px;
-
   left: 50%;
   bottom: -13px;
   transform: translateX(-50%);
@@ -102,22 +113,22 @@
   font-size: 12px;
   line-height: 12px;
   text-transform: lowercase;
-  color: $font-color-secondary;
+  color: $font-color;
 
-  background-color: $bg-color-secondary;
+  background-color: $bg-color-termin;
 
   @media (min-width: $tablet-width) {
     width: 130px;
-    bottom: -9px;
+    bottom: -7px;
 
     font-size: 14px;
     line-height: 14px;
 
-    background-color: $bg-color;
+    background-color: $bg-color-termin-tablet;
   }
 
   @media (min-width: $desktop-width) {
-    background-color: $bg-color-secondary;
+    background-color: $bg-color-termin;
   }
 }
 
@@ -131,7 +142,7 @@
   line-height: 24px;
   text-transform: uppercase;
 
-  border: 1px solid $border-color-secondary;
+  border: 1px solid $border-color-description;
   border-radius: 3px;
 
   @media (min-width: $tablet-width) {
