--- a/source/sass/components/main-container.scss
+++ b/source/sass/components/main-container.scss
@@ -1,5 +1,7 @@
 @use "../base/variables" as *;
 
+// Основное содержимое страницы
+
 .main-container {
   &--secondary {
     @media (min-width: $desktop-width) {
@@ -76,11 +78,12 @@
     margin-bottom: 37px;
 
     @media (min-width: $tablet-width) {
-      font-size: 60px;
-      line-height: 60px;
       margin-top: 50px;
       margin-bottom: 54px;
       padding: 0 40px;
+
+      font-size: 60px;
+      line-height: 60px;
     }
 
     @media (min-width: $desktop-width) {
