--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -2,11 +2,16 @@
 @use "../base/mixin" as mix;
 
 $bg-color-promo: #64a73c;
+$bg-color-promo-desktop: $accent-color;
+$font-color-mobile: $basic-white;
+$font-color: $basic-black;
+
+// Промо-секция
 
 .promo {
   position: relative;
 
-  color: $font-color-accent;
+  color: $font-color-mobile;
 
   background-image: url("../../img/promo-background-mobile.jpg");
   background-repeat: no-repeat;
@@ -44,7 +49,8 @@ $bg-color-promo: #64a73c;
       height: 100%;
       width: 50%;
       left: 50%;
-      background-color: $bg-color-accent;
+
+      background-color: $bg-color-promo-desktop;
       opacity: 85%;
     }
   }
@@ -109,20 +115,18 @@ $bg-color-promo: #64a73c;
 }
 
 .promo__description {
-  margin: 0;
+  margin: 0 0 29px 0;
 
   font-family: $font-secondary;
   line-height: 14px;
   text-transform: uppercase;
   text-align: center;
 
-  margin-bottom: 29px;
-
   @media (min-width: $tablet-width) {
     text-align: start;
     font-size: 20px;
     line-height: 20px;
-    margin-bottom: 49px;
+    margin: 0 0 49px 0;
   }
 }
 
@@ -131,6 +135,7 @@ $bg-color-promo: #64a73c;
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
+    margin: 0;
     z-index: -1;
     position: absolute;
     right: 0;
@@ -138,7 +143,7 @@ $bg-color-promo: #64a73c;
   }
 
   @media (min-width: $desktop-width) {
-    right: 220px;
+    left: 37%;
     bottom: 50px;
   }
 }
